WIP gateway